--- a/configs/blogpost/5_shot_mt.yaml
+++ b/configs/blogpost/5_shot_mt.yaml
@@ -1,7 +1,7 @@
-gen_data_dir: "TowerEval-Data-v0.1/data/instructions_data/0_shot"
+gen_data_dir: "TowerEval-Data-v0.1/data/instructions_data/5_shot"
 eval_data_dir: "TowerEval-Data-v0.1/data/raw_data"
-gen_output_dir: "TowerEval-Data-v0.1/generations/0_shot"
-eval_output_dir: "TowerEval-Data-v0.1/evaluations/0_shot"
+gen_output_dir: "TowerEval-Data-v0.1/generations/5_shot"
+eval_output_dir: "TowerEval-Data-v0.1/evaluations/5_shot"
 tasks: 
   - name: mt
     subtasks:
@@ -71,17 +71,51 @@ tasks:
       comet:
         batch_size: 16
 models:
-  - name: gpt-3.5-turbo
-    type: open-ai
+  - name: TowerBase-7B-v0.1
+    type: vllm
     arguments:
-      model: "gpt-3.5-turbo"
+      model_dir: Unbabel/TowerBase-7B-v0.1
+      n_gpus: 1
       max_tokens: 1024
-      debug: True
-      retry_max_attempts: 200
-  - name: gpt-4
-    type: open-ai
+      run_async: True
+      batch_size: -1
+  - name: llama2-7b-hf
+    type: vllm
     arguments:
-      model: "gpt-4"
+      model_dir: meta-llama/Llama-2-7b-hf
+      n_gpus: 1
       max_tokens: 1024
-      debug: True
-      retry_max_attempts: 200
+      run_async: True
+      batch_size: -1
+  - name: llama2-13b-hf
+    type: vllm
+    arguments:
+      model_dir: meta-llama/Llama-2-13b-hf
+      n_gpus: 1
+      max_tokens: 1024
+      run_async: True
+      batch_size: -1
+  - name: alma-pretrained-13b
+    type: vllm
+    arguments:
+      model_dir: haoranxu/ALMA-13B
+      n_gpus: 1
+      max_tokens: 1024
+      run_async: True
+      batch_size: -1
+  - name: llama2-70b-hf
+    type: vllm
+    arguments:
+      model_dir: meta-llama/Llama-2-70b-hf
+      n_gpus: 2
+      max_tokens: 1024
+      run_async: True
+      batch_size: -1
+  - name: mixtral-8x7B-v0.1
+    type: vllm
+    arguments:
+      model_dir: mistralai/Mixtral-8x7B-v0.1
+      n_gpus: 2
+      max_tokens: 1024
+      run_async: True
+      batch_size: -1
