--- a/configs/examples/gen_eval.yaml
+++ b/configs/examples/gen_eval.yaml
@@ -3,37 +3,37 @@ eval_data_dir: "TowerEval-Data-v0.1/data/raw_data"
 gen_output_dir: "TowerEval-Data-v0.1/generations/5_shot"
 eval_output_dir: "TowerEval-Data-v0.1/evaluations/5_shot"
 tasks: 
-  - name: ape
+  - name: mt
     subtasks:
-      nllb_3b_wmt23.de-en:
-      nllb_3b_wmt23.en-de: 
-      nllb_3b_wmt23.en-zh: 
+      flores.en-pt:
+      flores.en-zh:
+        gen_args:
         eval_args:
           metrics:
-            ter:
-              asian_support: True
             chrf:
             bleu:
               tokenizer: zh
             comet:
               batch_size: 16
-            comet_kiwi:
-              batch_size: 16
-      nllb_3b_wmt23.ru-en:
     metrics:
-      ter:
-        asian_support: True
       chrf:
+      bleu:
       comet:
         batch_size: 16
-      comet_kiwi:
-        batch_size: 16
-      bleu:
 models:
-  - name: llama2-13b-hf
+  - name: TowerInstruct-7B-v0.1
     type: vllm
     arguments:
-      model_dir: meta-llama/Llama-2-13b-hf
+      model_dir: Unbabel/TowerInstruct-7B-v0.1
+      n_gpus: 1
+      max_tokens: 1024
+      run_async: True
+      batch_size: -1
+      stop_sequences: ["</s>"]
+  - name: TowerBase-7B-v0.1
+    type: vllm
+    arguments:
+      model_dir: Unbabel/TowerBase-7B-v0.1
       n_gpus: 1
       max_tokens: 1024
       run_async: True
