added the  google-cloud-aiplatform dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ sentence-transformers = "^2.2.2"
 faiss-cpu = "^1.7.4"
 python-dotenv = "^1.0.0"
 bleurt-pytorch = {git = "https://github.com/lucadiliello/bleurt-pytorch.git"}
+google-cloud-aiplatform = "^1.40.0"
 
 [tool.poetry.dev-dependencies]
 mock = ">=3.0.5,<4.0.0"
