--- a/configs/tower_paper/5_shot_generic_models.yaml
+++ b/configs/tower_paper/5_shot_generic_models.yaml
@@ -1,7 +1,7 @@
-gen_data_dir: "TowerEval-Data-v0.1/data/instructions_data/0_shot_tower_instruct_prompt"
+gen_data_dir: "TowerEval-Data-v0.1/data/instructions_data/5_shot"
 eval_data_dir: "TowerEval-Data-v0.1/data/raw_data"
-gen_output_dir: "TowerEval-Data-v0.1/generations/0_shot_tower_instruct_prompt"
-eval_output_dir: "TowerEval-Data-v0.1/evaluations/0_shot_tower_instruct_prompt"
+gen_output_dir: "TowerEval-Data-v0.1/generations/5_shot"
+eval_output_dir: "TowerEval-Data-v0.1/evaluations/5_shot"
 tasks: 
   - name: mt
     subtasks:
@@ -86,9 +86,7 @@ tasks:
               batch_size: 16
             comet_kiwi:
               batch_size: 16
-      nllb_3b_wmt23.zh-en:
       nllb_3b_wmt23.ru-en:
-      nllb_3b_wmt23.en-ru:
     metrics:
       ter:
         asian_support: True
@@ -98,29 +96,61 @@ tasks:
       comet_kiwi:
         batch_size: 16
       bleu:
-  - name: ner
+  - name: gec
     subtasks:
-      multiconer2023.en:
-      multiconer2023.de:
-      multiconer2023.fr:
-      multiconer2023.es:
-      multiconer2023.it:
-      multiconer2023.pt:
-      multiconer2023.zh:
+      conll14.en:
+      fm.de:
+      cowsl2h.es:
     metrics:
-      f1sequence:
-        hypothesis_format: "text-tuple-list"
-        reference_format: "jsonl"
-        tokenize_hypothesis: False
-        default_noent_tag: "O"
-        valid_ner_tags: ["Person", "Location", "Group", "Product", "CreativeWorks", "Medical"]
+      errant:
+        tokenize_hypothesis: True
+      ter:
 models:
-  - name: TowerInstruct-7B-v0.1
+  - name: TowerBase-7B-v0.1
     type: vllm
     arguments:
-      model_dir: Unbabel/TowerInstruct-7B-v0.1
+      model_dir: Unbabel/TowerBase-7B-v0.1
       n_gpus: 1
       max_tokens: 1024
       run_async: True
       batch_size: -1
-      stop_sequences: ["</s>"]
+  - name: llama2-7b-hf
+    type: vllm
+    arguments:
+      model_dir: meta-llama/Llama-2-7b-hf
+      n_gpus: 1
+      max_tokens: 1024
+      run_async: True
+      batch_size: -1
+  - name: llama2-13b-hf
+    type: vllm
+    arguments:
+      model_dir: meta-llama/Llama-2-13b-hf
+      n_gpus: 1
+      max_tokens: 1024
+      run_async: True
+      batch_size: -1
+  - name: alma-pretrained-13b
+    type: vllm
+    arguments:
+      model_dir: haoranxu/ALMA-13B
+      n_gpus: 1
+      max_tokens: 1024
+      run_async: True
+      batch_size: -1
+  - name: llama2-70b-hf
+    type: vllm
+    arguments:
+      model_dir: meta-llama/Llama-2-70b-hf
+      n_gpus: 2
+      max_tokens: 1024
+      run_async: True
+      batch_size: -1
+  - name: mixtral-8x7B-v0.1
+    type: vllm
+    arguments:
+      model_dir: mistralai/Mixtral-8x7B-v0.1
+      n_gpus: 2
+      max_tokens: 1024
+      run_async: True
+      batch_size: -1
