--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ google-cloud-aiplatform = "^1.40.0"
 lm_eval = {git = "https://github.com/EleutherAI/lm-evaluation-harness.git"}
 datasets = "^2.14.6"
 anthropic = "^0.17.0"
+vllm = "^0.4.0.post1"
+cohere = "^5.2.2"
 
 [tool.poetry.dev-dependencies]
 mock = ">=3.0.5,<4.0.0"
