--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ ml-metrics = "tower-eval.cli:compute_metrics"
 
 [tool.poetry.dependencies]
 python = ">=3.9.0,<3.13"
-sacrebleu = {extras = ["ko"], version = "^2.3.1"}
+sacrebleu = {extras = ["ko", "ja"], version = "^2.3.1"}
 mecab-ko = "^1.0.0"
 errant = ">=2.3.3"
 unbabel-comet = {git = "https://github.com/Unbabel/COMET.git", branch = "master"}
