--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,18 +18,9 @@ sacrebleu = {extras = ["ko", "ja"], version = "^2.3.1"}
 mecab-ko = "^1.0.0"
 errant = ">=2.3.3"
 unbabel-comet = {git = "https://github.com/Unbabel/COMET.git", branch = "master"}
-scikit-learn = "^1.3"
-scipy = "^1.11"
-boto3 = "^1.28"
 loguru = "^0.7"
-openai = "^0.28"
 tenacity = "^8.2"
-text-generation = "^0.6"
 jinja2 = "^3.1"
-psutil = "^5.9.5"
-pymorphy2 = "^0.9"
-nest-asyncio = "^1.5"
-wandb = "^0.15.12"
 jupyter = "^1.0.0"
 seaborn = "^0.13.0"
 spacy = "^3.7.2"
@@ -37,15 +28,12 @@ nltk = "^3.8.1"
 mosestokenizer = "^1.2.1"
 sentence-transformers = "^2.2.2"
 faiss-cpu = "^1.7.4"
-python-dotenv = "^1.0.0"
 bleurt-pytorch = {git = "https://github.com/lucadiliello/bleurt-pytorch.git"}
 google-cloud-aiplatform = "^1.40.0"
 metricx = {git = "https://github.com/ricardorei/metricx.git"}
-datasets = "^2.14.6"
-anthropic = "^0.17.0"
-vllm = "0.4.0.post1"
-cohere = "^5.2.2"
-setuptools = "69.5.1"
+vllm = "^0.6.4"
+anthropic = "^0.40.0"
+cohere = "^5.13.3"
 
 [tool.poetry.dev-dependencies]
 mock = ">=3.0.5,<4.0.0"
